fix: disable pull-down-to-refresh during drag on mobile (fixes #5)

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -13,6 +13,13 @@ body {
 	overflow-x: hidden;
 }
 
+html,
+body {
+	&:has(.is-dragging) {
+		overscroll-behavior-y: none !important;
+	}
+}
+
 #root {
 	display: flex;
 	flex-direction: column;
